[package]
name = "td"
version = "0.1.0"
authors = ["Axolotl rishavghosh2007@gmail.com"]
edition = "2021"
description = "Simple Dictionary on the terminal"
license = "MIT"
readme="README.md"
repository = "https://github.com/famedaxolotl/terminal-dictionary"
keywords = ["wget", "cli", "caie", "igcse", "past-papers"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ureq = "2.10.0"
