[package]
name = "terminal-dictionary"
version = "0.1.2"
authors = ["Axolotl rishavghosh2007@gmail.com"]
edition = "2021"
description = "Simple Dictionary on the terminal"
license = "MIT"
readme="README.md"
repository = "https://github.com/famedaxolotl/terminal-dictionary"
keywords = ["dictionary", "cli", "api-client", "thesaurus", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
colored = "2.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ureq = "2.10.0"
